# lists-htmx

./: .cspell.json  .env.example  Cargo.toml  docker-compose.yml  tailwind.config.mjs  words.txt
migrations/: 20240612174825_create_users_and_lists_table.sql  20240619192523_add_tasks_for_lists.sql
public/: style.css
public/js/: script.js
src/: common.rs  error.rs  htmx.rs  main.rs
src/components/: date_time.rs  error.rs  lists.rs  message.rs  mod.rs  not_found.rs
src/layouts/: default.rs
src/models/: list.rs  mod.rs  user.rs
src/pages/: about.rs  home.rs  lists.rs  mod.rs  not_found.rs
src/services/: lists.rs  mod.rs
