[package]
name = "axum-production-coding"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
hypertext = { version = "0.5.0", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
httpc-test = "0.1.9"
