[package]
name = "axum-production-coding"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock", "serde"] }
dotenvy = "0.15.7"
hypertext = { version = "0.5.0", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "time", "tls-rustls"] }
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
httpc-test = "0.1.9"
